feat: added task management system , permissions and enhance task interface and improved UI

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@ Notes/
 .env.test.local
 .env.production.local
 
+# Project documentation
+PROJECT_REPORT.md
+README.md
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
