--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql2": "^3.13.0",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^3.0.1",
+    "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
